--- a/index.html
+++ b/index.html
@@ -54,6 +54,42 @@
                 <p class="award-nominations">5x Wins <br> 5x Nominations</p>
              </div>
             </div>
+            
+        </div>
+
+        <div class="twice-songs">
+            <div class="twice-sngs-title">MOST STREAMED <br> SONGS</div>
+
+            <div class="top-3-songs">
+
+                <!-- FANCY -->
+                <div class="fancy">
+                    <div class="gold-stream"><!--I put this for naming the top 1-->
+                        <h3 class="top-1-streamed">FANCY 169.3 MILLION STREAMS</h3>
+                    </div>
+                    <img src="images/Twice_-_Fancy_You.png" alt="FancyCover" style="max-height: 200px;" class="fancy-you">
+                </div>
+
+                <!-- WHAT IS LOVE -->
+                <div class="what-is-love">
+                    <div class="silver-stream"><!--I put this for naming the top 2-->
+                        <h3 class="top-2-streamed">WHAT IS LOVE? 138.1 MILLION STREAMS</h3>
+                    </div>
+
+                    <img src="images/Twice_–_What_Is_Love__cover.jpg" alt="WhatisLoveCover" style="max-height: 200px;" class="wil-cover">
+                </div>
+
+                <!-- FEEL SPECIAL -->
+                <div class="feel-special">
+                    <div class="bronze-stream">
+                        <div class="top-3-streamed">FEEL SPECIAL 128.3 <br> MILLION STREAMS</div>
+                    </div>
+
+                    <img src="images/Twice_-_Feel_Special.png" alt="FeelSpecialCover" style="max-height: 200px;" class="feelspecial">
+                </div>
+            </div>
+
+            </div>
         </div>
     </div>
 </body>
