--- a/index.html
+++ b/index.html
@@ -90,6 +90,11 @@
             </div>
 
             </div>
+
+          <div class="members">
+              
+          </div>
+        
         </div>
     </div>
 </body>
